# C-Practise

AI-Practise/: Makefile  README.md  logger_test  run.sh
AI-Practise/include/: log_filter.h  logger.h
AI-Practise/src/: log_filter.c  logger.c  logger_test.c
gtest_project/: README.md
gtest_project/my_project/: CMakeLists.txt
gtest_project/my_project/include/: calculator.h
gtest_project/my_project/src/: calculator.c
gtest_project/my_project/test/: calculator_test.cpp  log_filter_test.cpp  logger_test.cpp
week1/: 120.c  1823.c  46.c
week2/: 1423.c  143.c  1472.c
week3/: 146.c  274.c  826.c
week4/: 464.c  567.c  958.c
week5/: 532.c  641.c  LCR078.c
